--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,6 @@ add_executable(projecto_progra_3 main.cpp
         Pelicula.h
         Repertorio.cpp
         Repertorio.h
+        PeliculaBuilder.h
 
 )
