--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,6 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(projecto_progra_3 main.cpp
         main.cpp
         Usuario.h
+        ControlEdad.h
 
 )
