--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,11 @@
 cmake_minimum_required(VERSION 3.26)
-project(projecto_progra_3)
+project(projecto_Progra3)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(projecto_progra_3 main.cpp
+add_executable(projecto_Progra3 main.cpp
         main.cpp
         Usuario.h
         ControlEdad.h
-        Repertorio.h
-        Nodo.h
-        ControlEdad.h
-        Pelicula.h
-        GrafoPeliculas.h
-        PeliculaBuilder.h
-
 )
+
